src/objects/Program__c.object
<CustomObject>
    <fields>
        <fullName>Application_Cost_Current__c</fullName>
        <label>Application Cost Current</label>
        <summarizedField>Program_Application__c.Application_Cost_Current__c</summarizedField>
        <summaryForeignKey>Program_Application__c.Program__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Application_Cost_High__c</fullName>
        <label>Application Cost High</label>
        <summarizedField>Program_Application__c.Application_Cost_High__c</summarizedField>
        <summaryForeignKey>Program_Application__c.Program__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Application_Cost_Low__c</fullName>
        <label>Application Cost Low</label>
        <summarizedField>Program_Application__c.Application_Cost_Low__c</summarizedField>
        <summaryForeignKey>Program_Application__c.Program__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>MOT_Id__c</fullName>
        <externalId>true</externalId>
        <label>MOT Id</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Reviewed_Approved__c</fullName>
        <label>Reviewed &amp; Approved</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SW_Apps_Instructions__c</fullName>
        <label>SW &amp; Apps Instructions</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Stable__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Stable this program is used by. If there are more than one stables using this program this field will be blank.</description>
        <inlineHelpText>Stable this program is used by. If there are more than one stables using this program this field will be blank.</inlineHelpText>
        <label>Stable</label>
        <referenceTo>Stable__c</referenceTo>
        <relationshipLabel>Programs</relationshipLabel>
        <relationshipName>Programs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Stables__c</fullName>
        <label>Stables</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>FMD State</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tech_Team_MOT_Id__c</fullName>
        <label>Tech Team (MOT Id)</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tech_Team__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Tech Team</label>
        <referenceTo>Tech_Team__c</referenceTo>
        <relationshipLabel>Programs</relationshipLabel>
        <relationshipName>Programs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Baseline</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Delta</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>of_Apps__c</fullName>
        <inlineHelpText>Total # of Applications on this Program</inlineHelpText>
        <label># of Apps</label>
        <summaryForeignKey>Program_Application__c.Program__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Program</label>
    <listViews>
        <fullName>All</fullName>
        <columns>MOT_Id__c</columns>
        <columns>NAME</columns>
        <columns>Stable__c</columns>
        <columns>Stables__c</columns>
        <columns>Tech_Team__c</columns>
        <columns>Reviewed_Approved__c</columns>
        <columns>of_Apps__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Program Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Programs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>